--- a/schedule/index.html
+++ b/schedule/index.html
@@ -213,7 +213,12 @@ a:hover {
 				</li>
 				<li>
 					Lecture <a href="https://www.youtube.com/watch?v=dkqwPyltFmQ" target="_blank">capture recording</a>, and the <a href="../pdf/calc06_annotated.pdf" target="_blank">lecture boards</a>, <em>unfortunately my recording failed today, so I've linked to an equivalent lecture from last year</em>
-				</li></ul>
+				</li>
+				<li>
+					1pm tutorial <a href="https://youtu.be/v2hmOCMW1d0" target="_blank">capture recording</a>, and the <a href="../pdf/calc06tuta_annotated.pdf" target="_blank">tutorial boards</a>.
+				</li>
+			
+			</ul>
 			</td>
 		</tr>		<tr>
 			<td><strong>07</strong> &middot; 11/03/2024</td>
