--- a/schedule/index.html
+++ b/schedule/index.html
@@ -228,9 +228,26 @@ a:hover {
 			<td>
 				<ul>
 					<li>Integration</li>
+					<ul>
+						<li>
+							<em>Fundamental Theorem of Calculus</em>
+						</li>
+						<li>
+							<em>Techniques of anti-differentiation</em>
+						</li>
+					</ul>
 				</ul>
 			</td>
-			<td></td>
+			<td>
+				<ul>
+					<li>
+						Reading: APEX Calculus <a href="https://killianobrien.github.io/apex/output/html/chapter_anti_tech.html" target="_blank">Chapter 6: Techniques of Antidifferentiation</a>
+					</li>
+					<li>
+						Lecture <a href="https://youtu.be/L1zrIEuX9IQ" target="_blank">capture recording part 1.</a>, and <a href="https://youtu.be/1JyDH44qDjI" target="_blank">capture recording part 2.</a>, and the <a href="../pdf/calc07_annotated.pdf" target="_blank">lecture boards</a>.
+					</li>
+				</ul>
+			</td>
 		</tr>		<tr>
 			<td><strong>08</strong> &middot; 18/03/2024</td>
 			<td>
