--- a/schedule/index.html
+++ b/schedule/index.html
@@ -255,7 +255,15 @@ a:hover {
 					<li>Integration</li>
 				</ul>
 			</td>
-			<td></td>
+			<td>
+				<ul>
+					<li>
+						Reading: APEX Calculus <a href="https://killianobrien.github.io/apex/output/html/chapter_app_of_int.html" target="_blank">Chapter 7: Applications of Integration</a> <em>Sections 7.1 -- 7.4</em>.
+					</li>
+					<li>
+						Lecture <a href="https://youtu.be/D_HJblaCgAI" target="_blank">capture recording</a>, and the <a href="../pdf/calc08_annotated.pdf" target="_blank">lecture boards</a>.
+						</li></ul>
+			</td>
 		</tr>		<tr>
 			<td><strong>&nbsp; &nbsp; &nbsp;</strong> &middot; 25/03/2024</td>
 			<td style=" border-bottom:none;  background-color:#84bd00; text-align: center;"><span style="color:#000000;"></span></td>
