--- a/schedule/index.html
+++ b/schedule/index.html
@@ -284,7 +284,16 @@ a:hover {
 					<li>Sequences</li>
 				</ul>
 			</td>
-			<td></td>
+			<td>
+				<ul>
+					<li>
+						Reading: APEX Calculus <a href="https://killianobrien.github.io/apex/output/html/sec_sequences.html" target="_blank">Section 9.1 on Sequences</a>
+					</li>
+					<li>
+						Sequences <a href="../pdf/tutorial-sheet-01-sequences.pdf" target="_blank">tutorial sheet</a>
+					</li>
+				</ul>
+			</td>
 		</tr>
 		<tr>
 			<td><strong>10</strong> &middot; 22/04/2024</td>
