--- a/schedule/index.html
+++ b/schedule/index.html
@@ -292,6 +292,9 @@ a:hover {
 					<li>
 						Sequences <a href="../pdf/tutorial-sheet-01-sequences.pdf" target="_blank">tutorial sheet</a>
 					</li>
+					<li>
+						Lecture <a href="https://youtu.be/zWZHC3m-SDs" target="_blank">capture recording</a>, and the <a href="../pdf/calc09_annotated.pdf" target="_blank">lecure boards</a>
+					</li>
 				</ul>
 			</td>
 		</tr>
