--- a/schedule/index.html
+++ b/schedule/index.html
@@ -292,11 +292,17 @@ a:hover {
 					<li>
 						Sequences <a href="../pdf/tutorial-sheet-01-sequences.pdf" target="_blank">tutorial sheet</a>
 					</li>
-					<!-- <li>
+					<li>
 						Sequences <a href="../pdf/tutorial-sheet-01-sequences-solutions.pdf" target="_blank">tutorial sheet solutions</a>
-					</li> -->
+					</li>
 					<li>
 						Lecture <a href="https://youtu.be/zWZHC3m-SDs" target="_blank">capture recording</a>, and the <a href="../pdf/calc09_annotated.pdf" target="_blank">lecure boards</a>
+					</li>
+					<li>
+						Friday 1pm tutorial <a href="https://youtu.be/YrwM5TzyBoM" target="_blank">capture recording</a>, and the <a href="../pdf/calc09tuta_annotated.pdf" target="_blank">tutorial boards.</a>
+					</li>
+					<li>
+						Friday 3pm tutorial <a href="https://youtu.be/YMqFzmEKhZY" target="_blank">capture recording</a>, and the <a href="../pdf/calc09tutb_annotated.pdf" target="_blank">tutorial boards. </a>
 					</li>
 				</ul>
 			</td>
