--- a/schedule/index.html
+++ b/schedule/index.html
@@ -314,7 +314,19 @@ a:hover {
 					<li>Series</li>
 				</ul>
 			</td>
-			<td></td>
+			<td>
+			<ul>
+				<li>
+					Reading: APEX Calculus <a href="https://killianobrien.github.io/apex/output/html/chapter_sequences_series.htmll" target="_blank">Chapter 9 on Series</a>
+				</li>
+				<li>
+					Lecture <a href="https://youtu.be/GmIj_4aLNdw" target="_blank">caprture recording</a>, and the <a href="../pdf/calc10_annotated.pdf" target="_blank">lecture boards.</a>
+				</li>
+				<li>
+					<a href="../pdf/tutorial-sheet-02-series.pdf" target="_blank">Series tutorial sheet</a>
+				</li>
+				</ul>
+			</td>
 		</tr>
 		<tr>
 			<td><strong>11</strong> &middot; 29/04/2024</td>
