--- a/schedule/index.html
+++ b/schedule/index.html
@@ -326,6 +326,9 @@ a:hover {
 					<a href="../pdf/tutorial-sheet-02-series.pdf" target="_blank">Series tutorial sheet</a>
 				</li>
 				<!-- <li>
+					<a href="../pdf/tutorial-sheet-02-series-solutions.pdf" target="_blank">Series tutorial sheet solutions</a>
+				</li> -->
+				<!-- <li>
 					Friday 1pm tutorial <a href="https://youtu.be/d70Epf4A9a4" target="_blank">capture recording</a>, and the <a href="../pdf/calc10tuta_annotated.pdf" target="_blank">tutorial boards.</a>
 				</li>
 				<li>
