--- a/schedule/index.html
+++ b/schedule/index.html
@@ -317,7 +317,7 @@ a:hover {
 			<td>
 			<ul>
 				<li>
-					Reading: APEX Calculus <a href="https://killianobrien.github.io/apex/output/html/chapter_sequences_series.htmll" target="_blank">Chapter 9 on Series</a>
+					Reading: APEX Calculus <a href="https://killianobrien.github.io/apex/output/html/chapter_sequences_series.html" target="_blank">Chapter 9 on Series</a>
 				</li>
 				<li>
 					Lecture <a href="https://youtu.be/GmIj_4aLNdw" target="_blank">caprture recording</a>, and the <a href="../pdf/calc10_annotated.pdf" target="_blank">lecture boards.</a>
