vid aUDIO FOR WEEK 9

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -320,7 +320,7 @@ a:hover {
 					Reading: APEX Calculus <a href="https://killianobrien.github.io/apex/output/html/chapter_sequences_series.html" target="_blank">Chapter 9 on Series</a>
 				</li>
 				<li>
-					Lecture <a href="https://youtu.be/GmIj_4aLNdw" target="_blank">caprture recording</a>, and the <a href="../pdf/calc10_annotated.pdf" target="_blank">lecture boards.</a>
+					Lecture <a href="https://youtu.be/GmIj_4aLNdw" target="_blank">caprture recording</a>, and the <a href="../pdf/calc10_annotated.pdf" target="_blank">lecture boards.</a> Unfortunately, the audio cuts off in the second half of the recording. At <a href="https://www.youtube.com/watch?v=mxI8gyL_igU" target="_blank">this link</a> you can find a roughly equivalent lecture from last year, where I consider some exercises, starting with Q8, from the sequences tutorial sheet. 
 				</li>
 				<li>
 					<a href="../pdf/tutorial-sheet-02-series.pdf" target="_blank">Series tutorial sheet</a>
