--- a/schedule/index.html
+++ b/schedule/index.html
@@ -338,10 +338,16 @@ a:hover {
 			<td><strong>11</strong> &middot; 29/04/2024</td>
 			<td>
 				<ul>
+					<li>Series: <em>Comparison tests, ratio test and telesoping series</em></li>
 					<li>Review</li>
 				</ul>
 			</td>
-			<td></td>
+			<td>
+				<ul>
+					<li>Lecture <a href="https://youtu.be/IdLvPHiBsys" target="_blank">capture recording</a>, and the <a href="../pdf/calc11_annotated.pdf" target="_blank">lecture boards</a>
+					</li>
+				</ul>
+			</td>
 		</tr>
 		<tr>
 			<td><strong>&nbsp; &nbsp; &nbsp;</strong> &middot; 06/05/2024</td>
