--- a/schedule/index.html
+++ b/schedule/index.html
@@ -346,6 +346,12 @@ a:hover {
 				<ul>
 					<li>Lecture <a href="https://youtu.be/IdLvPHiBsys" target="_blank">capture recording</a>, and the <a href="../pdf/calc11_annotated.pdf" target="_blank">lecture boards</a>
 					</li>
+					<li>
+						Friday 1pm tutorial <a href="https://youtu.be/4AlQeJBW4ms" target="_blank">capture recording</a>, and the <a href="../pdf/calc11tuta_annotated.pdf" target="_blank">tutorial boards.</a>
+					</li>
+					<li>
+						Friday 3pm tutorial <a href="https://youtu.be/0mxR0LHdbLQ" target="_blank">capture recording</a>, and the <a href="../pdf/calc11tutb_annotated.pdf" target="_blank">tutorial boards. </a>
+					</li>
 				</ul>
 			</td>
 		</tr>
