--- a/card.html
+++ b/card.html
@@ -16,7 +16,7 @@
 <body>
 <div class="card">
   <img src="me-red.jpg" alt="Killian" style="width:220px">
-  <h2>Dr Killian O'Brien<br>Senior Lecturer</h2>
+  <h2>Dr Killian O'Brien<br>Senior Lecturer, Mathematics</h2>
   <p>3.28, Dalton Building,<br>
   Manchester Metropolitan University,<br>
 Chester Street, Manchester M1 5GD.</p>
