--- a/card.html
+++ b/card.html
@@ -30,6 +30,9 @@ Chester Street, Manchester M1 5GD.</p>
   </div>
   <p><a href="https://teams.microsoft.com/l/chat/0/0?users=k.m.obrien@mmu.ac.uk" target="_blank"><button>Message me on Teams</button></a>
   <a href="mailto:k.m.obrien@mmu.ac.uk"><button>Email me at <code>k.m.obrien@mmu.ac.uk</code></button></a></p>
+  <p>Room 3.28, Dalton Building,<br>
+    Manchester Metropolitan University,<br>
+  Chester Street, Manchester M1 5GD.</p>
 </div>
 </body>
 
