--- a/schedule/index.html
+++ b/schedule/index.html
@@ -31,6 +31,8 @@ a:hover {
         </style>
     </head>
 <body>
+	<h1>Test h1 level header</h1>
+	<p>And a short p.</p>
 <table border="1" cellpadding="2" cellspacing="0" width="100%">
 	<tbody>
 		<tr>
